--- a/css/style.css
+++ b/css/style.css
@@ -402,28 +402,45 @@
 
     /* Хиты и товары */
 
-    .best-sellers-list {
-        display: flex;
-        margin-bottom: 40px;
-    }
-
+    .best-sellers-list,
     .catalog-list {
         display: flex;
         flex-wrap: wrap;
         margin-bottom: 40px;
+        justify-content: space-between;
+    }
 
+    .best-item  {
+        min-height: 320px;
+        width: 267px;
+    }
+
+    .best-item p{
+        margin: 0px;
     }
 
     .catalog-item {
         min-height: 320px;
-        min-width: 267px;
+        width: 267px;
     }
+
+    .catalog-item-image img,
+    .catalog-item img {
+        margin:0px;
+        border: 1px solid transparent;
+        border-radius: 50% ;
+        -webkit-border-radius: 50% ;
+        -moz-border-radius: 50% ;
+        -ms-border-radius: 50% ;
+        -o-border-radius: 50% ;
+}
 
     .catalog-item-price {
         font-size: 45px;
         line-height: 45px;
         text-shadow: 0.5px 0.9px 3px rgba(49, 50, 53, 0.5);
         font-weight: 700;
+         margin-top: -63px;
     }
 
     .catalog-item-price span {
@@ -432,11 +449,13 @@
     }
 
     .catalog-item-title {
+        display: block;
         color: #ffffff;
         font-weight: 500;
         font-size: 16px;
         line-height: 22px;
         text-align: center;
+        margin-top: -27px;
     }
 
     /* Остальные блоки */
@@ -449,14 +468,26 @@
         min-width: 1146px;
         min-height: 306px;
         margin-bottom: 44px;
+        padding: 10px 21px;
+
     }
 
-    .features b {
+    .features p {
+        font-size: 24px;
+        line-height: 30px;
         font-weight: 500;
+        padding-bottom: 5px;
+
+
     }
 
     .features-list {
-        display: flex;
+        display:block;
+        column-count: 2;
+    }
+
+    .features-list li {
+        margin-bottom: 32px;
 
     }
 
@@ -508,9 +539,14 @@
     .map {
         display: flex;
         justify-content: center;
+        position: relative;
     }
 
     .contacts-info {
+        position: absolute;
+        right: 300px;
+        top: 2030px;
+        z-index: 1;
         width: 302px;
         height: 305px;
         background-color: #ffffff;
@@ -635,6 +671,8 @@
     .about-us-list {
         font-size: 13px;
         line-height: 18px;
+        display:block;
+        column-count: 2;
     }
 
     .about-us-partners {
